--- a/src/component/ContentModal.module.css
+++ b/src/component/ContentModal.module.css
@@ -1,8 +1,13 @@
 .image {
-	width: 60px;
-	height: 60px;
+	width: 100px;
+	height: 100px;
 }
 
 .image + .image {
-	margin-left: 8px;
+	margin-left: 24px;
+}
+
+.imageWrapper {
+	border: 1px solid black;
+	padding: 10px;
 }
